tests/compile_fail/display/wrong_formatting_argument.rs
#[derive(derive_more::Display)]
#[display(fmt = "Stuff({:M})", bar)]
pub struct Foo {
    bar: String,
}

fn main() {}
